--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.0.7",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
