--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
