--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^5.0.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
@@ -39,12 +40,16 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "webpack": "^5.91.0",
+    "webpack-merge": "^5.10.0"
   }
 }
