--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.5",
     "google-auth-library": "^9.6.3",
     "googleapis": "^133.0.0",
     "install": "^0.13.0",
@@ -50,6 +52,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8",
     "webpack": "^5.91.0",
