--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.0.3",
     "onestep": "file:..",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^5.0.1",
