--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.22.1",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "react-star-ratings": "^2.3.0",
     "redux-persist": "^6.0.0",
     "swiper": "^11.0.7",
     "typewriter-effect": "^2.21.0"
