--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^1.0.6",
     "@material-tailwind/html": "^2.2.2",
+    "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
