--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^1.0.6",
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
+    "@mobiscroll/react-lite": "^4.10.9",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "onestep": "file:..",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^5.0.1",
@@ -40,6 +42,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-star-ratings": "^2.3.0",
+    "react-time-picker": "^6.6.0",
     "redux-persist": "^6.0.0",
     "swiper": "^11.0.7",
     "typewriter-effect": "^2.21.0"
