--- a/package.json
+++ b/package.json
@@ -272,6 +272,7 @@
     "react-refresh": "^0.14.0",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
+    "react-router-hash-link": "^2.4.3",
     "react-spinners": "^0.13.8",
     "react-top-loading-bar": "^2.3.1",
     "read-cache": "^1.0.0",
