--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^5.0.1",
+    "react-otp-input": "^3.1.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
