--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "country-state-city": "^3.2.1",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "flowbite": "^2.3.0",
