--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "callsites": "^3.1.0",
     "camelcase-css": "^2.0.1",
     "caniuse-lite": "^1.0.30001584",
+    "casual": "^1.6.2",
     "chalk": "^2.4.2",
     "chokidar": "^3.5.3",
     "color-convert": "^1.9.3",
@@ -97,6 +98,7 @@
     "esutils": "^2.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "fast-deep-equal": "^3.1.3",
     "fast-glob": "^3.3.2",
     "fast-json-stable-stringify": "^2.1.0",
