--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "find-up": "^5.0.0",
     "flat-cache": "^3.2.0",
     "flatted": "^3.2.9",
+    "flowbite-react": "^0.9.0",
     "follow-redirects": "^1.15.5",
     "for-each": "^0.3.3",
     "foreground-child": "^3.1.1",
