--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "google-auth-library": "^9.6.3",
     "googleapis": "^133.0.0",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.0.3",
     "onestep": "file:..",
