--- a/package.json
+++ b/package.json
@@ -301,6 +301,7 @@
     "side-channel": "^1.0.4",
     "signal-exit": "^4.1.0",
     "simple-update-notifier": "^2.0.0",
+    "socket.io": "^4.7.5",
     "source-map-js": "^1.0.2",
     "statuses": "^2.0.1",
     "string-width": "^5.1.2",
