--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,9 @@
     "react-star-ratings": "^2.3.0",
     "react-time-picker": "^6.6.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.0.7",
+    "timeago-react": "^3.0.6",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
