--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-star-ratings": "^2.3.0",
+    "react-time-ago": "^7.3.3",
     "react-time-picker": "^6.6.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
