--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-otp-input": "^3.1.1",
     "react-phone-number-input": "^3.4.3",
