--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "react-star-ratings": "^2.3.0",
     "react-time-ago": "^7.3.3",
     "react-time-picker": "^6.6.0",
+    "react-top-loading-bar": "^2.3.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.0.7",
