--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,6 @@
   ],
   "routes": [
     { "src": "/server/(.*)", "dest": "/server/index.js" },
-    { "src": "/(.*)", "dest": "/client/dist/index.html" }
+    { "src": "/(.*)", "dest": "/client/dist/$1" }
   ]
 }
