--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-star-ratings": "^2.3.0",
+    "react-switch": "^7.0.0",
     "react-time-ago": "^7.3.3",
     "react-time-picker": "^6.6.0",
     "react-top-loading-bar": "^2.3.1",
