--- a/package.json
+++ b/package.json
@@ -274,6 +274,7 @@
     "react-router-dom": "^6.22.1",
     "react-router-hash-link": "^2.4.3",
     "react-spinners": "^0.13.8",
+    "react-switch": "^7.0.0",
     "react-top-loading-bar": "^2.3.1",
     "read-cache": "^1.0.0",
     "readdirp": "^3.6.0",
