--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-google-places-autocomplete": "^4.0.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-modern-drawer": "^1.4.0",
     "react-otp-input": "^3.1.1",
     "react-phone-number-input": "^3.4.3",
     "react-places-autocomplete": "^7.3.0",
