--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "react-switch": "^7.0.0",
     "react-time-ago": "^7.3.3",
     "react-time-picker": "^6.6.0",
+    "react-toastify": "^10.0.5",
     "react-top-loading-bar": "^2.3.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
